translation for invitation email subject

--- a/app/Resources/translations/messages.hu.yml
+++ b/app/Resources/translations/messages.hu.yml
@@ -14,3 +14,4 @@ Personal message of %inviter% &lt;%email%&gt;: %inviter% &lt;%email%&gt; személ
 To accept this invitation please visit the following link: A meghívás elfogadásához kövesse a következő linket
 to reject it please visit this link: elutasításához pedig ezt a linket
 Best regards,: Üdvözlettel,
+Invitation: Meghívás
